--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,8 @@ dj-database-url==2.1.0
 Django==5.0
 django-cors-headers==4.3.1
 djangorestframework==3.14.0
+gunicorn==21.2.0
+packaging==23.2
 python-decouple==3.8
 pytz==2023.3.post1
 sqlparse==0.4.4
