--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ django-cors-headers==4.3.1
 djangorestframework==3.14.0
 gunicorn==21.2.0
 packaging==23.2
+psycopg2==2.9.9
 python-decouple==3.8
 pytz==2023.3.post1
 sqlparse==0.4.4
