--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,24 @@
 asgiref==3.7.2
+boto3==1.33.11
+botocore==1.33.11
+certifi==2023.11.17
+charset-normalizer==3.3.2
 dj-database-url==2.1.0
 Django==5.0
 django-cors-headers==4.3.1
+django-storages==1.14.2
 djangorestframework==3.14.0
 gunicorn==21.2.0
+idna==3.6
+jmespath==1.0.1
 packaging==23.2
 psycopg2==2.9.9
+python-dateutil==2.8.2
 python-decouple==3.8
 pytz==2023.3.post1
+requests==2.31.0
+s3transfer==0.8.2
+six==1.16.0
 sqlparse==0.4.4
 typing_extensions==4.8.0
+urllib3==2.0.7
